design fix and optimization

--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
 <meta property="og:url" content="https://ioextended.gdgjalandhar.com" />
 <meta property="og:title" content="Google I/O Extended 2023 | Jalandhar" />
 <meta property="og:description" content="Google I/O Extended Jalandhar, a full day event, where you find updates of Google's Products. The magic of I/O doesn’t end after the main event. Local developers come together for I/O Extended events to discuss the latest new technologies, summarize content, hosting Q&As, and meet other technology enthusiasts. This will be a physical event, promising to each of our attendee an experience, unlike anything they've ever seen." />
-<meta property="og:image" content="metatagio.png" />
+<meta property="og:image" content="https://ioextended.gdgjalandhar.com/io-extended-banner.jpg" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://ioextended.gdgjalandhar.com" />
 <meta property="twitter:title" content="Google I/O Extended 2023 | Jalandhar" />
 <meta property="twitter:description" content="Google I/O Extended Jalandhar, a full day event, where you find updates of Google's Products. The magic of I/O doesn’t end after the main event. Local developers come together for I/O Extended events to discuss the latest new technologies, summarize content, hosting Q&As, and meet other technology enthusiasts. This will be a physical event, promising to each of our attendee an experience, unlike anything they've ever seen." />
-<meta property="twitter:image" content="metatagio.png" />
+<meta property="twitter:image" content="https://ioextended.gdgjalandhar.com/io-extended-banner.jpg" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
 
